--- a/index.Rmd
+++ b/index.Rmd
@@ -19,13 +19,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Circles plot
 
+This plot was made to visualize data collected regarding teachers' opinions on the most important actions to make distance education work for students with learning disabilities during the COVID-19 school closures in Finland.
 
 ```{r echo=FALSE}
 setwd("C:/Users/hehusb/Nextcloud/ILS/Tark/ILS2/Rfiles")
 library(packcircles)
 library(ggplot2)
+library(viridisLite)
 library(viridis)
 library(ggiraph)
+
 #Datan lukeminen csv:stä (UTF-8) ja muuttaminen dataframiksi
 #Tässä data on "Mihin tarvitsee tukea". Excelissä laskettu yhteen vastaukse kolumneittain ennen R:ään siirtoa.
 data_avo <- read.csv(file="C:/Users/hehusb/Nextcloud/ILS/Tark/ILS2/Rfiles/avoimet_kat.csv", header=TRUE, sep=";")
