--- a/index.Rmd
+++ b/index.Rmd
@@ -17,9 +17,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Circles plot
+## Circles plot 1
 
-This plot was made to visualize data collected regarding teachers' opinions on the most important actions to make distance education work for students with learning disabilities during the COVID-19 school closures in Finland.
 
 ```{r echo=FALSE}
 setwd("C:/Users/hehusb/Nextcloud/ILS/Tark/ILS2/Rfiles")
@@ -70,5 +69,44 @@ widg
 #library(htmlwidgets)
 #saveWidget(widg, file=paste0( getwd(), "/circular_packing_interactive.html"))
 ```
+## Circles plot 1
+```{r echo=FALSE}
+#Datan lukeminen csv:stä (UTF-8) ja muuttaminen dataframiksi
+#Tässä data on "Mihin tarvitsee tukea". Excelissä laskettu yhteen vastaukse kolumneittain ennen R:ään siirtoa.
+data_avo <- read.csv(file="C:/Users/hehusb/Nextcloud/ILS/Tark/ILS2/Rfiles/haasteet_opvaik_avot.csv", header=TRUE, sep=";")
+data_avo_df <- as.data.frame(t(data_avo))
+data_avo_df
 
+#packcircles:in layoutin valinta ja määritys sekä uusien, ympyröiden määrittävien muuttujien lisääminen dataan
+packing <- circleProgressiveLayout(data_avo_df, sizetype='area')
+data_avo_df <- cbind(data_avo_df, packing)
+data_avo_df
 
+#ryhmien, eli ympyröden nimien lisääminen dataan
+groups <- c("Kodin tuki", "Motivointi", "Selkeät ohjeet", "Tuki", "Tavoittaminen", "Toiminnanohjaus", "Tietotekniset haasteet", "Oppilaan hyvinvointi", "Opettajan työhön liittyvät asiat")
+groups
+data_avo_df <- cbind(data_avo_df, groups)
+data_avo_df
+
+# interaktiivinen datan lisäys
+data_avo_df$text <- paste("Kategoria: ",data_avo_df$groups, "\n", "Lukumäärä:", data_avo_df$V1, "\n", "")
+data_avo_df
+
+#ympyröiden plottaus
+plot(data_avo_df$radius, data_avo_df$V1)
+
+dat.gg <- circleLayoutVertices(packing, npoints=50)
+
+p <- ggplot() + 
+  geom_polygon_interactive(data = dat.gg, aes(x, y, group = id, fill=id, tooltip = data_avo_df$text[id], data_id = id), colour = "black", alpha = 0.6) +  
+  scale_fill_viridis() +
+  geom_text(data = data_avo_df, aes(x, y, label=groups)) +
+#  scale_size_continuous(range = c(1,4)) +  
+  theme_void() + 
+  theme(legend.position="none") +
+  coord_equal()  
+
+widg <- ggiraph(ggobj = p, width_svg = 7, height_svg = 7)
+widg  
+
+```
